deployment/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deployment
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
        - name: webui
          image: rdt_20:dnd_ui
          imagePullPolicy: Never
          ports:
            - containerPort: 80
