deployment/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
