deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - dnd4.ru
        - express.dnd4.ru
      secretName: tls-secret
  rules:
    - host: dnd4.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webui-service
                port:
                  number: 80
    - host: express.dnd4.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
